cmake_minimum_required(VERSION 2.8.4)
project(hacker_rank)

set(SOURCE_FILES
    main.cpp
    maximizing_xor.cpp
    maximizing_xor.h
    halloween_party.cpp
    halloween_party.h
    game_of_thrones.cpp
    game_of_thrones.h
    gem_stones.cpp
    gem_stones.h
    the_love_letter_mystery.cpp
    the_love_letter_mystery.h
    )
add_executable(hacker_rank ${SOURCE_FILES})